Options for adding actions and conditions are created

--- a/src/TextResources/ActionTabResources.properties
+++ b/src/TextResources/ActionTabResources.properties
@@ -1,2 +1,8 @@
 AddActionButtonLabel=Add action
 RemoveActionButtonLabel=Remove action
+ConditionOptions=Input,Collisions,Variables,Ands/Ors,BeginStep,EndStep
+ActionOptions=Translations,Variables,Global
+Splitter=,
+ConditionSelectorLabel=Select condition
+ActionSelectorLabel=Select action
+ActionRemoverLabel=Select row
