Starting to make separate classes for different conditions and actions

--- a/src/TextResources/ActionTabResources.properties
+++ b/src/TextResources/ActionTabResources.properties
@@ -1,8 +1,10 @@
+AddConditionButtonLabel=Add condition
 AddActionButtonLabel=Add action
+RemoveConditionButtonLabel=Remove condition
 RemoveActionButtonLabel=Remove action
 ConditionOptions=Input,Collisions,Variables,Ands/Ors,BeginStep,EndStep
-ActionOptions=Translations,Variables,Global
+ActionOptions=Translations,ChangeVariables,Global
 Splitter=,
 ConditionSelectorLabel=Select condition
 ActionSelectorLabel=Select action
-ActionRemoverLabel=Select row
+RemoverLabel=Select row
