Set up basics right before adding event handlers

--- a/src/TextResources/ActionConditionVBoxResources.properties
+++ b/src/TextResources/ActionConditionVBoxResources.properties
@@ -1,3 +1,4 @@
+OptionsTag=Options
 InputOptions=KeyPressed,KeyHeld,KeyRelease,Click
 CollisionsOptions=Collision
 VariablesOptions=StringEquals,DoubleEqualTo,DoubleGreaterThan,DoubleLessThan,IsBoolean
@@ -7,3 +8,5 @@ EndstepOptions=Priority
 TranslationsOptions=MoveTo,Move,RotateTo,Rotate,Destroy,Create
 ChangeVariablesOptions=ChangeString,ChangeDouble,ChangeBoolean
 GlobalOptions=ChangeWorld
+ConditionSelectorLabel=Select condition
+ActionSelectorLabel=Select action
