Refactoring to make a separate tab for actions and conditions:

--- a/src/TextResources/ActionTabResources.properties
+++ b/src/TextResources/ActionTabResources.properties
@@ -1,9 +1,5 @@
-AddConditionButtonLabel=Add condition
-AddActionButtonLabel=Add action
-RemoveConditionButtonLabel=Remove condition
-RemoveActionButtonLabel=Remove action
-ConditionOptions=Input,Collisions,Variables,Ands/Ors,BeginStep,EndStep
-ActionOptions=Translations,ChangeVariables,Global
-ConditionSelectorLabel=Select condition
-ActionSelectorLabel=Select action
+AddButtonLabel=Add action
+RemoveButtonLabel=Remove action
+Options=Translations,ChangeVariables,Global
+SelectorLabel=Select action
 RemoverLabel=Select row
