Adding and removing actions and conditions finally working

--- a/src/TextResources/ActionConditionVBoxResources.properties
+++ b/src/TextResources/ActionConditionVBoxResources.properties
@@ -4,7 +4,7 @@ CollisionsOptions=Collision
 VariablesOptions=StringEquals,DoubleEqualTo,DoubleGreaterThan,DoubleLessThan,IsBoolean
 Ands/OrsOptions=And,Or,Not
 BeginStepOptions=Priority
-EndstepOptions=Priority
+EndStepOptions=Priority
 TranslationsOptions=MoveTo,Move,RotateTo,Rotate,Destroy,Create
 ChangeVariablesOptions=ChangeString,ChangeDouble,ChangeBoolean
 GlobalOptions=ChangeWorld
