--- a/src/TextResources/ConditionTabResources.properties
+++ b/src/TextResources/ConditionTabResources.properties
@@ -2,4 +2,4 @@ AddButtonLabel=Add condition
 RemoveButtonLabel=Remove condition
 Options=Input,Collisions,Variables,Ands/Ors,BeginStep,EndStep
 SelectorLabel=Select condition
-Label=Select row
+RemoverLabel=Select row
