--- a/src/resources/exceptions/exceptions.properties
+++ b/src/resources/exceptions/exceptions.properties
@@ -1,3 +1,4 @@
 AnimationNotFound  = The animation %s could not be found.
 UndefinedAnimation = A null animation was accessed.
 NoObjectByName = No GameObject exists by the name %s
+IllegalFile = Cannot Save to File at %s
