--- a/resources/KnownProjectNames.properties
+++ b/resources/KnownProjectNames.properties
@@ -1,2 +1,3 @@
-#Wed Nov 22 04:46:35 EST 2017
+#Mon Nov 27 12:12:05 EST 2017
+Test1=Modified 2017-11-27T12\:12\:05.957
 SaverTest3=Modified 2017-11-22T04\:46\:35.826
