Refactoring to have classes only have observable lists, currently have a bug

--- a/src/TextResources/ActionConditionVBoxResources.properties
+++ b/src/TextResources/ActionConditionVBoxResources.properties
@@ -3,8 +3,7 @@ InputOptions=KeyPressed,KeyHeld,KeyRelease,Click
 CollisionsOptions=Collision
 VariablesOptions=StringEquals,DoubleEqualTo,DoubleGreaterThan,DoubleLessThan,IsBoolean
 Ands/OrsOptions=And,Or,Not
-BeginStepOptions=Priority
-EndStepOptions=Priority
+PrioritizeOptions=BeginStep,EndStep
 TranslationsOptions=MoveTo,Move,RotateTo,Rotate,Destroy,Create
 ChangeVariablesOptions=ChangeString,ChangeDouble,ChangeBoolean
 GlobalOptions=ChangeWorld
