--- a/src/TextResources/ConditionTabResources.properties
+++ b/src/TextResources/ConditionTabResources.properties
@@ -1,5 +1,6 @@
 AddButtonLabel=Add condition
 RemoveButtonLabel=Remove condition
-Options=Input,Collisions,Variables,Ands/Ors,BeginStep,EndStep
+Options=Input,Collisions,Variables,Ands/Ors,Prioritize
 SelectorLabel=Select condition
 RemoverLabel=Select row
+ActionCheckBoxLabel=Associated actions
