Just have to finalize the controller now

--- a/src/TextResources/ActionConditionVBoxResources.properties
+++ b/src/TextResources/ActionConditionVBoxResources.properties
@@ -7,3 +7,4 @@ PrioritizeOptions=BeginStep,EndStep
 TranslationsOptions=MoveTo,Move,RotateTo,Rotate,Destroy,Create
 ChangeVariablesOptions=ChangeString,ChangeDouble,ChangeBoolean
 GlobalOptions=ChangeWorld
+ActionCheckBoxLabel=Associated actions
