--- a/resources/KnownProjectNames.properties
+++ b/resources/KnownProjectNames.properties
@@ -1,4 +1,5 @@
-#Mon Nov 27 18:34:21 EST 2017
+#Wed Nov 29 19:35:30 EST 2017
 Test1=Modified 2017-11-27T18\:34\:21.947
-Test2 = 1
-Flappy_Birb = 2
+Flappy_Birb=Modified 2017-11-29T19\:30\:04.952
+Demo_RPG=Modified 2017-11-29T19\:35\:30.346
+Test2=1
