cleaned up flappy birb images

--- a/resources/KnownProjectNames.properties
+++ b/resources/KnownProjectNames.properties
@@ -1,3 +1,4 @@
-Test1=Modified 2017-11-27T18\:34\:21.947
-Flappy_Birb=Modified 2017-11-29T19\:30\:04.952
+#Thu Nov 30 13:27:29 EST 2017
+Test1=Modified 2017-11-30T13\:27\:28.995
+Flappy_Birb=Modified 2017-11-30T13\:27\:29.110
 Demo_RPG=Modified 2017-11-29T21\:03\:15.743
