--- a/resources/KnownProjectNames.properties
+++ b/resources/KnownProjectNames.properties
@@ -1,3 +1,5 @@
-#Wed Nov 29 18:37:55 EST 2017
-Test1=Modified 2017-11-29T18\:37\:51.590
-Flappy_Birb=Modified 2017-11-29T18\:37\:55.728
+#Thu Nov 30 14:14:47 EST 2017
+Test1=Modified 2017-11-29T20\:19\:09.658
+Actions/Conditions\ Demo=Modified 2017-11-30T14\:13\:37.663
+Actions\ Conditions\ Demo=Modified 2017-11-30T14\:14\:47.379
+Flappy_Birb=Modified 2017-11-29T18\:53\:28.133
