--- a/resources/KnownProjectNames.properties
+++ b/resources/KnownProjectNames.properties
@@ -3,3 +3,4 @@ Test1=Modified 2017-11-30T14\:28\:30.921
 Actions\ Conditions\ Demo=Modified 2017-11-30T14\:36\:16.287
 Flappy_Birb=Modified 2017-11-30T14\:28\:31.032
 Demo_RPG=Modified 2017-11-30T14\:28\:31.488
+Bounds\ Test=5
