--- a/src/resources/exceptions/exceptions.properties
+++ b/src/resources/exceptions/exceptions.properties
@@ -3,3 +3,4 @@ UndefinedAnimation = A null animation was accessed.
 NoObjectByName = No GameObject exists by the name %s
 AddPar = Cannot add parameter '%s' of type %s
 IllegalFile = Cannot Save to File at %s
+ClassNotFoundFor = Operation class not found for name %s
