Just added another option for actions

--- a/src/TextResources/ActionTabResources.properties
+++ b/src/TextResources/ActionTabResources.properties
@@ -1,5 +1,5 @@
 AddButtonLabel=Add action
 RemoveButtonLabel=Remove action
-Options=Translations,ChangeVariables,Global
+Options=Translations,ChangeVariables,ChangeObjects,Global
 SelectorLabel=Select action
 RemoverLabel=Select row
