Action Factory Done for # 17

--- a/src/engine/operations/Operations.properties
+++ b/src/engine/operations/Operations.properties
@@ -1,5 +1,5 @@
-Boolean = booleanops, booleanops, BooleanOperation
-Double = doubleops, doubleops, DoubleOperation
-String = stringops, stringops, StringOperation
-Vector = vectorops, vectorops, VectorOperation
-Sprite = gameobjectops, gameobjectops, GameObjectOperation
+Boolean = booleanops.booleanops, BooleanOperation
+Double = doubleops.doubleops, DoubleOperation
+String = stringops.stringops, StringOperation
+Vector = vectorops.vectorops, VectorOperation
+Sprite = gameobjectops.gameobjectops, GameObjectOperation
