--- a/src/resources/exceptions/exceptions.properties
+++ b/src/resources/exceptions/exceptions.properties
@@ -4,3 +4,5 @@ NoObjectByName = No GameObject exists by the name %s
 AddPar = Cannot add parameter '%s' of type %s
 IllegalFile = Cannot Save to File at %s
 ClassNotFoundFor = Operation class not found for name %s
+CantMakeOperation = Cannot make operations by the name %s
+ActionNotFound = Action not found by name %s
