Modified properties files for #19-23, archived/deleted deprecated classes

--- a/src/engine/Actions/changeObject/changeObject.properties
+++ b/src/engine/Actions/changeObject/changeObject.properties
@@ -1,2 +1,4 @@
-#Create\ Object = engine.Actions.changeObject.Create
-#Destroy\ Object = engine.Actions.changeObject.Destroy
+Create\ Object = engine.Actions.changeObject.Create
+Destroy\ Object = engine.Actions.changeObject.Destroy
+Display\ Inventory = engine.Actions.changeObject.DisplayInventory
+#?? engine.Actions.changeObject.PlaceOnObject
