--- a/src/engine/Actions/movement/movement.properties
+++ b/src/engine/Actions/movement/movement.properties
@@ -1,1 +1,5 @@
 #Rotate = engine.Actions.movement.Rotate
+Move\ By  = engine.Actions.movement.Move
+Move\ To  = engine.Actions.movement.MoveTo
+Rotate\ By = engine.Actions.movement.Rotate
+Rotate\ To = engine.Actions.movement.RotateTo
