--- a/src/engine/Actions/variableSetting/variableSetting.properties
+++ b/src/engine/Actions/variableSetting/variableSetting.properties
@@ -1,1 +1,6 @@
-#Change\ Boolean = engine.Actions.variableSetting.ChangeBoolean
+Change\ Boolean = engine.Actions.variableSetting.ChangeBoolean
+Change\ Double = engine.Actions.variableSetting.ChangeDouble
+Change\ Double\ List = engine.Actions.variableSetting.ChangeDoubleList
+Change\ String = engine.Actions.variableSetting.ChangeString
+Change\ String\ List = engine.Actions.variableSetting.ChangeStringList
+Transfer\ Inventory = engine.Actions.variableSetting.GiveInventory
