--- a/src/engine/operations/booleanops/booleanops.properties
+++ b/src/engine/operations/booleanops/booleanops.properties
@@ -1,2 +1,21 @@
 # The_GUI_Friendly_Name = The_Package.The_Full_Class_Name
 Greater\ Than = engine.operations.booleanops.GreaterThan
+AND = engine.operations.booleanops.And
+TRUE = engine.operations.booleanops.BooleanTrue
+Boolean\ Variable\ From = engine.operations.booleanops.BooleanVariableOf
+Collision\ with = engine.operations.booleanops.Collision
+Numbers\ are\ Equal = engine.operations.booleanops.DoubleEquals
+## Variable\ Greater\ Than = engine.operations.booleanops.DoubleGreaterThan Should this exist?
+## Double\ Less\ Than = engine.operations.booleanops.GreaterThan
+Key\ is\ Held = engine.operations.booleanops.KeyHeld
+Key\ was\ Pressed = engine.operations.booleanops.KeyPressed
+Key\ was\ Released = engine.operations.booleanops.KeyReleased
+Not = engine.operations.booleanops.Not
+Sprite\ was\ Clicked = engine.operations.booleanops.ObjectClicked
+Sprite\ Click\ Held = engine.operations.booleanops.ObjectClickHeld
+Sprite\ Click\ Released = engine.operations.booleanops.ObjectClickReleased
+Or = engine.operations.booleanops.Or
+Screen\ was\ Clicked = engine.operations.booleanops.ScreenClicked
+Screen\ Click\ Held = engine.operations.booleanops.ScreenClickHeld
+Screen\ Click\ Released = engine.operations.booleanops.ScreenClickReleased
+Strings\ are\ Equal = engine.operations.booleanops.StringEquals
