#21 More vector ops added

--- a/src/engine/operations/vectorops/vectorops.properties
+++ b/src/engine/operations/vectorops/vectorops.properties
@@ -4,3 +4,5 @@ Location\ Of = engine.operations.vectorops.LocationOf
 Vector\ Difference= engine.operations.vectorops.VectorDifference
 Vector\ Sum = engine.operations.vectorops.VectorSum
 Vector\ Variable\ from= engine.operations.vectorops.VectorVariableFrom
+Vector = engine.operations.vectorops.BasicVector
+Normalized = engine.operations.vectorops.UnitVector
