Properties Files for #4

--- a/src/engine/operations/doubleops/doubleops.properties
+++ b/src/engine/operations/doubleops/doubleops.properties
@@ -1,1 +1,15 @@
 # The_GUI_Friendly_Name = The_Package.The_Full_Class_Name
+Angle\ Between\ Vectors = engine.operations.doubleops.AngleBetween
+Cosine = engine.operations.doubleops.Cos
+Cross\ Product = engine.operations.doubleops.CrossProduct
+Difference = engine.operations.doubleops.Difference
+Dot\ Product = engine.operations.doubleops.DotProduct
+Double\ Variable\ Of = engine.operations.doubleops.DoubleVariableOf
+Length\ Of\ String = engine.operations.doubleops.LengthOfString
+Vector\ Magnitude = engine.operations.doubleops.Magnitude
+Product = engine.operations.doubleops.Product
+Quotient = engine.operations.doubleops.Quotient
+Sine = engine.operations.doubleops.Sine
+Sum = engine.operations.doubleops.Sum
+X\ of\ Vector = engine.operations.doubleops.XOf
+Y\ of\ Vector = engine.operations.doubleops.YOf
