--- a/src/engine/operations/stringops/stringops.properties
+++ b/src/engine/operations/stringops/stringops.properties
@@ -3,3 +3,4 @@ Concatenate = engine.operations.stringops.Concatenate
 Name\ Of\ Object = engine.operations.stringops.NameOf
 String\ From\ Number = engine.operations.stringops.StringFromNumber
 String\ Variable\ Of = engine.operations.stringops.StringVariableOf
+Substring = engine.operations.stringops.Substring
