Reworked many Operations/Actions for #7 to include GameObjectOperations

--- a/src/engine/operations/booleanops/booleanops.properties
+++ b/src/engine/operations/booleanops/booleanops.properties
@@ -1,12 +1,12 @@
 # The_GUI_Friendly_Name = The_Package.The_Full_Class_Name
 Greater\ Than = engine.operations.booleanops.GreaterThan
+Greater\ Than\ Or\ Equal\ To = engine.operations.booleanops.GreaterThanOrEqualTo
 AND = engine.operations.booleanops.And
 TRUE = engine.operations.booleanops.BooleanTrue
 Boolean\ Variable\ From = engine.operations.booleanops.BooleanVariableOf
-Collision\ with = engine.operations.booleanops.Collision
+Collision\ by\ Tag = engine.operations.booleanops.CollisionByTag
+Collision\ Between = engine.operations.booleanops.Collision
 Numbers\ are\ Equal = engine.operations.booleanops.DoubleEquals
-## Variable\ Greater\ Than = engine.operations.booleanops.DoubleGreaterThan Should this exist?
-## Double\ Less\ Than = engine.operations.booleanops.GreaterThan
 Key\ is\ Held = engine.operations.booleanops.KeyHeld
 Key\ was\ Pressed = engine.operations.booleanops.KeyPressed
 Key\ was\ Released = engine.operations.booleanops.KeyReleased
