--- a/src/engine/operations/doubleops/doubleops.properties
+++ b/src/engine/operations/doubleops/doubleops.properties
@@ -13,3 +13,4 @@ Sine = engine.operations.doubleops.Sine
 Sum = engine.operations.doubleops.Sum
 X\ of\ Vector = engine.operations.doubleops.XOf
 Y\ of\ Vector = engine.operations.doubleops.YOf
+Heading\ of = engine.operations.doubleops.HeadingOf
