--- a/src/engine/operations/vectorops/vectorops.properties
+++ b/src/engine/operations/vectorops/vectorops.properties
@@ -1,5 +1,5 @@
 # The_GUI_Friendly_Name = The_Package.The_Full_Class_Name
-Heading\ Of = engine.operations.vectorops.HeadingOf
+Vector\ Heading\ Of = engine.operations.vectorops.VectorHeadingOf
 Location\ Of = engine.operations.vectorops.LocationOf
 Vector\ Difference= engine.operations.vectorops.VectorDifference
 Vector\ Sum = engine.operations.vectorops.VectorSum
