Resolve #36 -- actions should work as parameters to actions/operations

--- a/src/engine/Actions/Actions.properties
+++ b/src/engine/Actions/Actions.properties
@@ -1,4 +1,6 @@
+#Relative Locations of properties files
 Modify\ Sprites = changeObject.changeObject
 Global\ Effects = global.global
 Movement = movement.movement
 Variable\ Changes = variableSetting.variableSetting
+Loops = actionLoops.actionLoops
