--- a/src/engine/operations/Operations.properties
+++ b/src/engine/operations/Operations.properties
@@ -1,5 +1,6 @@
-Boolean = booleanops.booleanops, BooleanOperation
-Double = doubleops.doubleops, DoubleOperation
-String = stringops.stringops, StringOperation
-Vector = vectorops.vectorops, VectorOperation
-Sprite = gameobjectops.gameobjectops, GameObjectOperation
+Boolean = engine.operations.booleanops.booleanops, BooleanOperation
+Double = engine.operations.doubleops.doubleops, DoubleOperation
+String = engine.operations.stringops.stringops, StringOperation
+Vector = engine.operations.vectorops.vectorops, VectorOperation
+Sprite = engine.operations.gameobjectops.gameobjectops, GameObjectOperation
+Action = engine.operations.actions, Action
