--- a/src/engine/Actions/changeObject/changeObject.properties
+++ b/src/engine/Actions/changeObject/changeObject.properties
@@ -1,4 +1,4 @@
 Create\ Object = engine.Actions.changeObject.Create
-Destroy\ Object = engine.Actions.changeObject.Destroy
+Remove\ From\ World = engine.Actions.changeObject.RemoveFromWorld
 Display\ Inventory = engine.Actions.changeObject.DisplayInventory
 #?? engine.Actions.changeObject.PlaceOnObject
