--- a/src/TextResources/SpriteCreatorResources.properties
+++ b/src/TextResources/SpriteCreatorResources.properties
@@ -4,6 +4,7 @@ TestTool1=test tool_1
 TestTool2=test tool_2
 SpriteTab=sprite
 ImageChooser=Open Image
-NameField=Enter Sprite Name: 
+NameField=Sprite Name: 
+CategoryField=Sprite Category:
 ConfirmButton=Confirm
 
