Tons of refactoring, resolve #34, added actions for velovity, acceleration (#42)

--- a/src/engine/Actions/movement/movement.properties
+++ b/src/engine/Actions/movement/movement.properties
@@ -3,3 +3,5 @@ Move\ By  = engine.Actions.movement.Move
 Move\ To  = engine.Actions.movement.MoveTo
 Rotate\ By = engine.Actions.movement.Rotate
 Rotate\ To = engine.Actions.movement.RotateTo
+Set\ Velocity = engine.Actions.movement.SetVelocity
+SetAcceleration = engine.Actions.movement.SetAcceleration
