--- a/src/engine/Actions/variableSetting/variableSetting.properties
+++ b/src/engine/Actions/variableSetting/variableSetting.properties
@@ -1,5 +1,8 @@
 Change\ Boolean = engine.Actions.variableSetting.ChangeBoolean
+Change\ Boolean\ of\ Holdable = engine.Actions.variableSetting.ChangeBooleanOfHoldable
 Change\ Double = engine.Actions.variableSetting.ChangeDouble
+Change\ Double \ of\ Holdable = engine.Actions.variableSetting.ChangeDoubleOfHoldable
 Change\ Double\ List = engine.Actions.variableSetting.ChangeDoubleList
 Change\ String = engine.Actions.variableSetting.ChangeString
+Change\ String\ of\ Holdable = engine.Actions.variableSetting.ChangeStringOfHoldable
 Transfer\ Inventory = engine.Actions.variableSetting.GiveInventory
