--- a/src/engine/Actions/Actions.properties
+++ b/src/engine/Actions/Actions.properties
@@ -4,3 +4,4 @@ Global\ Effects = global.global
 Movement = movement.movement
 Variable\ Changes = variableSetting.variableSetting
 Loops = actionLoops.actionLoops
+Dialog = dialog.dialog
