--- a/src/resources/exceptions/exceptions.properties
+++ b/src/resources/exceptions/exceptions.properties
@@ -6,3 +6,4 @@ IllegalFile = Cannot Save to File at %s
 ClassNotFoundFor = Operation class not found for name %s
 CantMakeOperation = Cannot make operations by the name %s
 ActionNotFound = Action not found by name %s
+SaveFail = Failed To Save Game
