--- a/src/resources/exceptions/exceptions.properties
+++ b/src/resources/exceptions/exceptions.properties
@@ -7,3 +7,4 @@ ClassNotFoundFor = Operation class not found for name %s
 CantMakeOperation = Cannot make operations by the name %s
 ActionNotFound = Action not found by name %s
 SaveFail = Failed To Save Game
+CompositeFail = Null passed to composite image
