Additional VectorOperation (Towards) #21

--- a/src/engine/operations/vectorops/vectorops.properties
+++ b/src/engine/operations/vectorops/vectorops.properties
@@ -3,6 +3,6 @@ Vector\ Heading\ Of = engine.operations.vectorops.VectorHeadingOf
 Location\ Of = engine.operations.vectorops.LocationOf
 Vector\ Difference= engine.operations.vectorops.VectorDifference
 Vector\ Sum = engine.operations.vectorops.VectorSum
-#Vector\ Variable\ from= engine.operations.vectorops.VectorVariableOf
 Vector = engine.operations.vectorops.BasicVector
 Normalized = engine.operations.vectorops.UnitVector
+Towards\ Location = engine.operations.vectorops.Towards
