Fixed properties file for #42

--- a/src/engine/operations/actions.properties
+++ b/src/engine/operations/actions.properties
@@ -1,16 +1,21 @@
-#Fri Dec 08 15:40:07 EST 2017
+#Sun Dec 10 17:38:41 EST 2017
+Do\ Times=engine.Actions.actionLoops.DoTimes
+Move\ By=engine.Actions.movement.Move
+Change\ Boolean\ of\ Holdable=engine.Actions.variableSetting.ChangeBooleanOfHoldable
+SetAcceleration=engine.Actions.movement.SetAcceleration
+Clear\ Typed=engine.Actions.dialog.ClearTyped
+Remove\ From\ World=engine.Actions.changeObject.RemoveFromWorld
+Change\ Double=engine.Actions.variableSetting.ChangeDouble
+Change\ String=engine.Actions.variableSetting.ChangeString
+Display\ Dialog=engine.Actions.dialog.DisplayDialog
+Rotate\ By=engine.Actions.movement.Rotate
 Move\ To=engine.Actions.movement.MoveTo
 Change\ Boolean=engine.Actions.variableSetting.ChangeBoolean
-Change\ Double=engine.Actions.variableSetting.ChangeDouble
-Remove\ From\ World=engine.Actions.changeObject.RemoveFromWorld
-Change\ Double\ List=engine.Actions.variableSetting.ChangeDoubleList
-Transfer\ Inventory=engine.Actions.variableSetting.GiveInventory
-Rotate\ By=engine.Actions.movement.Rotate
-Do\ Times=engine.Actions.actionLoops.DoTimes
-Display\ Inventory=engine.Actions.changeObject.DisplayInventory
-Change\ The\ World=engine.Actions.global.ChangeWorld
-Rotate\ To=engine.Actions.movement.RotateTo
-Create\ Object=engine.Actions.changeObject.Create
 Action\ Pair=engine.Actions.actionLoops.PairOfActions
-Change\ String=engine.Actions.variableSetting.ChangeString
-Move\ By=engine.Actions.movement.Move
+Set\ Velocity=engine.Actions.movement.SetVelocity
+Create\ Object=engine.Actions.changeObject.Create
+Change\ The\ World=engine.Actions.global.ChangeWorld
+Display\ Inventory=engine.Actions.changeObject.DisplayInventory
+Rotate\ To=engine.Actions.movement.RotateTo
+Change\ Double\ of\ Holdable=engine.Actions.variableSetting.ChangeDoubleOfHoldable
+Change\ String\ of\ Holdable=engine.Actions.variableSetting.ChangeStringOfHoldable
