Made Holdable and Inventory actions and ops #25

--- a/src/engine/Actions/changeObject/changeObject.properties
+++ b/src/engine/Actions/changeObject/changeObject.properties
@@ -1,4 +1,7 @@
 Create\ Object = engine.Actions.changeObject.Create
 Remove\ From\ World = engine.Actions.changeObject.RemoveFromWorld
 Display\ Inventory = engine.Actions.changeObject.DisplayInventory
-#?? engine.Actions.changeObject.PlaceOnObject
+Close\ Inventory = engine.Actions.changeObject.CloseInventory
+Add\ To\ Inventory = engine.Actions.changeObject.AddToInventory
+Remove\ From\ Inventory = engine.Actions.changeObject.RemoveFromInventory
+Set\ Inventory\ Background = engine.Actions.changeObject.SetInventoryBackground
