--- a/src/engine/operations/doubleops/doubleops.properties
+++ b/src/engine/operations/doubleops/doubleops.properties
@@ -5,6 +5,7 @@ Cross\ Product = engine.operations.doubleops.CrossProduct
 Difference = engine.operations.doubleops.Difference
 Dot\ Product = engine.operations.doubleops.DotProduct
 Double\ Variable\ Of = engine.operations.doubleops.DoubleVariableOf
+Double\ Variable\ Of\ Holdable = engine.operations.doubleops.DoubleVariableOfHoldable
 Length\ Of\ String = engine.operations.doubleops.LengthOfString
 Vector\ Magnitude = engine.operations.doubleops.Magnitude
 Product = engine.operations.doubleops.Product
