--- a/src/engine/operations/stringops/stringops.properties
+++ b/src/engine/operations/stringops/stringops.properties
@@ -3,4 +3,5 @@ Concatenate = engine.operations.stringops.Concatenate
 Name\ Of\ Object = engine.operations.stringops.NameOf
 String\ From\ Number = engine.operations.stringops.StringFromNumber
 String\ Variable\ Of = engine.operations.stringops.StringVariableOf
+String\ Variable\ Of\ Holdable = engine.operations.stringops.StringVariableOfHoldable
 Substring = engine.operations.stringops.Substring
