--- a/src/engine/Actions/changeObject/changeObject.properties
+++ b/src/engine/Actions/changeObject/changeObject.properties
@@ -1,4 +1,5 @@
 Create\ Object = engine.Actions.changeObject.Create
 Remove\ From\ World = engine.Actions.changeObject.RemoveFromWorld
 Display\ Inventory = engine.Actions.changeObject.DisplayInventory
+Set\ Animation = engine.Actions.changeObject.SetAnimationSequence
 #?? engine.Actions.changeObject.PlaceOnObject
