--- a/src/TextResources/SpriteCreatorResources.properties
+++ b/src/TextResources/SpriteCreatorResources.properties
@@ -1,5 +1,6 @@
 CreateSpriteButton=Create Sprite Template
 LoadImageButton=Load Image
+CreateImageButton=Create Image
 TestTool1=test tool_1
 TestTool2=test tool_2
 SpriteTab=sprite
