--- a/src/engine/Actions/dialog/dialog.properties
+++ b/src/engine/Actions/dialog/dialog.properties
@@ -1,2 +1,2 @@
-Display\ Dialog = engine.Actions.dialog.DisplayDialog
+Display\ Dialogue = engine.Actions.dialog.DisplayDialog
 Clear\ Typed = engine.Actions.dialog.ClearTyped
