#42 Ifs, #21 Collision vector

--- a/src/engine/Actions/Actions.properties
+++ b/src/engine/Actions/Actions.properties
@@ -3,5 +3,5 @@ Modify\ Sprites = changeObject.changeObject
 Global\ Effects = global.global
 Movement = movement.movement
 Variable\ Changes = variableSetting.variableSetting
-Loops = actionLoops.actionLoops
+Programming = actionLoops.actionLoops
 Dialog = dialog.dialog
