--- a/src/engine/operations/vectorops/vectorops.properties
+++ b/src/engine/operations/vectorops/vectorops.properties
@@ -6,3 +6,4 @@ Vector\ Sum = engine.operations.vectorops.VectorSum
 Vector = engine.operations.vectorops.BasicVector
 Normalized = engine.operations.vectorops.UnitVector
 Towards\ Location = engine.operations.vectorops.Towards
+Vector\ of\ Overlap = engine.operations.vectorops.NormalToCollision
