--- a/src/engine/Actions/Actions.properties
+++ b/src/engine/Actions/Actions.properties
@@ -5,3 +5,4 @@ Movement = movement.movement
 Variable\ Changes = variableSetting.variableSetting
 Programming = actionLoops.actionLoops
 Dialog = dialog.dialog
+Sprite\ Sizing = sizing.sizing
