#53 implemented global variables

--- a/src/engine/operations/booleanops/booleanops.properties
+++ b/src/engine/operations/booleanops/booleanops.properties
@@ -4,6 +4,7 @@ Greater\ Than\ Or\ Equal\ To = engine.operations.booleanops.GreaterThanOrEqualTo
 AND = engine.operations.booleanops.And
 Boolean\ Variable\ Of = engine.operations.booleanops.BooleanVariableOf
 Boolean\ Variable\ Of\ Holdable = engine.operations.booleanops.BooleanVariableOfHoldable
+Global\ Boolean\ Variable = engine.operations.booleanops.GlobalBooleanVariable
 Collision\ by\ Tag = engine.operations.booleanops.CollisionByTag
 Collision\ Between = engine.operations.booleanops.Collision
 Numbers\ are\ Equal = engine.operations.booleanops.DoubleEquals
