--- a/src/engine/operations/doubleops/doubleops.properties
+++ b/src/engine/operations/doubleops/doubleops.properties
@@ -6,6 +6,7 @@ Difference = engine.operations.doubleops.Difference
 Dot\ Product = engine.operations.doubleops.DotProduct
 Double\ Variable\ Of = engine.operations.doubleops.DoubleVariableOf
 Double\ Variable\ Of\ Holdable = engine.operations.doubleops.DoubleVariableOfHoldable
+Global\ Double\ Variable = engine.operations.doubleops.GlobalDoubleVariable
 Length\ Of\ String = engine.operations.doubleops.LengthOfString
 Vector\ Magnitude = engine.operations.doubleops.Magnitude
 Product = engine.operations.doubleops.Product
