--- a/src/engine/operations/stringops/stringops.properties
+++ b/src/engine/operations/stringops/stringops.properties
@@ -4,4 +4,5 @@ Name\ Of\ Object = engine.operations.stringops.NameOf
 String\ From\ Number = engine.operations.stringops.StringFromNumber
 String\ Variable\ Of = engine.operations.stringops.StringVariableOf
 String\ Variable\ Of\ Holdable = engine.operations.stringops.StringVariableOfHoldable
+Global\ String\ Variable = engine.operations.stringops.GlobalStringVariable
 Substring = engine.operations.stringops.Substring
