--- a/src/authoring/drawing/drawingTools/drawingTools.properties
+++ b/src/authoring/drawing/drawingTools/drawingTools.properties
@@ -1,3 +1,3 @@
-authoring.drawing.drawingTools.LineDrawer = Line
-authoring.drawing.drawingTools.CurveDrawer = Pencil
-authoring.drawing.drawingTools.EraserTool = Eraser
+drawingTools.LineDrawer = Line
+drawingTools.CurveDrawer = Pencil
+drawingTools.EraserTool = Eraser
