moved some operations around

--- a/src/engine/Actions/changeObject/changeObject.properties
+++ b/src/engine/Actions/changeObject/changeObject.properties
@@ -6,3 +6,5 @@ Close\ Inventory = engine.Actions.changeObject.CloseInventory
 Add\ To\ Inventory = engine.Actions.changeObject.AddToInventory
 Remove\ From\ Inventory = engine.Actions.changeObject.RemoveFromInventory
 Set\ Inventory\ Background = engine.Actions.changeObject.SetInventoryBackground
+Advanced\ Animation\ Setting = engine.Actions.changeObject.AdvancedAnimation
+Advanced\ Create\ Object = engine.Actions.changeObject.AdvancedCreate
