--- a/src/engine/Actions/variableSetting/variableSetting.properties
+++ b/src/engine/Actions/variableSetting/variableSetting.properties
@@ -7,4 +7,5 @@ Change\ Global\ Double = engine.Actions.variableSetting.ChangeGlobalDouble
 Change\ String = engine.Actions.variableSetting.ChangeString
 Change\ String\ of\ Holdable = engine.Actions.variableSetting.ChangeStringOfHoldable
 Change\ Global\ String = engine.Actions.variableSetting.ChangeGlobalString
+Change\ Arbitrary\ String = engine.Actions.variableSetting.AdvancedChangeString
 #Transfer\ Inventory = engine.Actions.variableSetting.GiveInventory
