--- a/src/engine/Actions/movement/movement.properties
+++ b/src/engine/Actions/movement/movement.properties
@@ -4,4 +4,6 @@ Move\ To  = engine.Actions.movement.MoveTo
 Rotate\ By = engine.Actions.movement.Rotate
 Rotate\ To = engine.Actions.movement.RotateTo
 Set\ Velocity = engine.Actions.movement.SetVelocity
-SetAcceleration = engine.Actions.movement.SetAcceleration
+Set\ Acceleration = engine.Actions.movement.SetAcceleration
+Set\ Path\ Point = engine.Actions.movement.AddToPath
+Follow\ Path = engine.Actions.movement.MoveOnPath
