--- a/src/engine/operations/vectorops/vectorops.properties
+++ b/src/engine/operations/vectorops/vectorops.properties
@@ -8,3 +8,4 @@ Normalized = engine.operations.vectorops.UnitVector
 Towards\ Location = engine.operations.vectorops.Towards
 Vector\ of\ Overlap = engine.operations.vectorops.NormalToCollision
 Mouse\ Location = engine.operations.vectorops.MouseLocation
+Scalar\ Multiple = engine.operations.vectorops.VectorScale
