Updated world transfer annotation/properties file

--- a/src/engine/Actions/global/global.properties
+++ b/src/engine/Actions/global/global.properties
@@ -1,1 +1,3 @@
 Change\ The\ World = engine.Actions.global.ChangeWorld
+Transfer\ Object\ To\ World = engine.Actions.global.TransferObjectToWorld
+Exit\ To\ Menu = engine.Actions.global.ExitToMenu
