Updated properties files #54

--- a/src/engine/Actions/Actions.properties
+++ b/src/engine/Actions/Actions.properties
@@ -6,3 +6,4 @@ Variable\ Changes = variableSetting.variableSetting
 Programming = actionLoops.actionLoops
 Dialog = dialog.dialog
 Sprite\ Sizing = sizing.sizing
+Advanced = advanced.advanced
