--- a/src/engine/Actions/movement/movement.properties
+++ b/src/engine/Actions/movement/movement.properties
@@ -4,4 +4,9 @@ Move\ To  = engine.Actions.movement.MoveTo
 Rotate\ By = engine.Actions.movement.Rotate
 Rotate\ To = engine.Actions.movement.RotateTo
 Set\ Velocity = engine.Actions.movement.SetVelocity
-SetAcceleration = engine.Actions.movement.SetAcceleration
+Set\ Acceleration = engine.Actions.movement.SetAcceleration
+Bounce = engine.Actions.movement.Bounce
+Remove\ Half\ Intersection = engine.Actions.movement.RemoveHalfIntersection
+Remove\ Intersection = engine.Actions.movement.RemoveIntersection
+Set\ ith\ Derivative = engine.Actions.movement.SetIthDerivative
+Stop\ Sprite = engine.Actions.movement.StopObject
