--- a/src/engine/operations/actions.properties
+++ b/src/engine/operations/actions.properties
@@ -1,21 +1,49 @@
-#Sun Dec 10 17:38:41 EST 2017
-Do\ Times=engine.Actions.actionLoops.DoTimes
-Move\ By=engine.Actions.movement.Move
-Change\ Boolean\ of\ Holdable=engine.Actions.variableSetting.ChangeBooleanOfHoldable
-SetAcceleration=engine.Actions.movement.SetAcceleration
-Clear\ Typed=engine.Actions.dialog.ClearTyped
-Remove\ From\ World=engine.Actions.changeObject.RemoveFromWorld
-Change\ Double=engine.Actions.variableSetting.ChangeDouble
-Change\ String=engine.Actions.variableSetting.ChangeString
-Display\ Dialog=engine.Actions.dialog.DisplayDialog
-Rotate\ By=engine.Actions.movement.Rotate
-Move\ To=engine.Actions.movement.MoveTo
-Change\ Boolean=engine.Actions.variableSetting.ChangeBoolean
+#Fri Dec 15 02:42:12 EST 2017
 Action\ Pair=engine.Actions.actionLoops.PairOfActions
-Set\ Velocity=engine.Actions.movement.SetVelocity
-Create\ Object=engine.Actions.changeObject.Create
 Change\ The\ World=engine.Actions.global.ChangeWorld
+Set\ Width\ (centered)=engine.Actions.sizing.SetWidthCentered
+Move\ By=engine.Actions.movement.Move
+Change\ Double=engine.Actions.variableSetting.ChangeDouble
+Rotate\ By=engine.Actions.movement.Rotate
+Place\ Text\ On=engine.Actions.dialog.PlaceTextOn
+Transfer\ Sprite\ to\ World=engine.Actions.global.TransferObjectToWorld
+Change\ Global\ String=engine.Actions.variableSetting.ChangeGlobalString
+Set\ Velocity=engine.Actions.movement.SetVelocity
+Remove\ Intersection=engine.Actions.movement.RemoveIntersection
+Set\ Animation=engine.Actions.changeObject.SetAnimationSequence
+Create\ Object=engine.Actions.changeObject.Create
+Remove\ From\ World=engine.Actions.changeObject.RemoveFromWorld
+Set\ Width\ (from\ left)=engine.Actions.sizing.SetWidthFromLeft
 Display\ Inventory=engine.Actions.changeObject.DisplayInventory
+Set\ Inventory\ Background=engine.Actions.changeObject.SetInventoryBackground
+Stop\ Sprite=engine.Actions.movement.StopObject
+Move\ To=engine.Actions.movement.MoveTo
+If\ Statement=engine.Actions.actionLoops.IfStatement
+Remove\ From\ Inventory=engine.Actions.changeObject.RemoveFromInventory
 Rotate\ To=engine.Actions.movement.RotateTo
-Change\ Double\ of\ Holdable=engine.Actions.variableSetting.ChangeDoubleOfHoldable
+Do\ Times=engine.Actions.actionLoops.DoTimes
+Set\ Height\ (from\ left)=engine.Actions.sizing.SetHeightFromTop
+Set\ Acceleration=engine.Actions.movement.SetAcceleration
+Set\ ith\ Derivative=engine.Actions.movement.SetIthDerivative
+Remove\ Half\ Intersection=engine.Actions.movement.RemoveHalfIntersection
+Change\ Global\ Double=engine.Actions.variableSetting.ChangeGlobalDouble
+Close\ Inventory=engine.Actions.changeObject.CloseInventory
+Bounce=engine.Actions.movement.Bounce
+Close\ Dialog=engine.Actions.dialog.CloseDialog
 Change\ String\ of\ Holdable=engine.Actions.variableSetting.ChangeStringOfHoldable
+Add\ To\ Path=engine.Actions.advanced.AddToPath
+Add\ To\ Inventory=engine.Actions.changeObject.AddToInventory
+Set\ Unlooped\ Animation=engine.Actions.changeObject.SetUnloopedAnimation
+Advanced\ Animation=engine.Actions.advanced.AdvancedAnimation
+Display\ Dialogue=engine.Actions.dialog.DisplayDialog
+Change\ String=engine.Actions.variableSetting.ChangeString
+Clear\ Typed=engine.Actions.dialog.ClearTyped
+Set\ Height\ (centered)=engine.Actions.sizing.SetHeightCentered
+Save\ Game=engine.Actions.global.SaveGame
+Change\ Double\ of\ Holdable=engine.Actions.variableSetting.ChangeDoubleOfHoldable
+Move\ On\ Path=engine.Actions.advanced.MoveOnPath
+Exit\ to\ Menu=engine.Actions.global.ExitToMenu
+Advanced\ Create=engine.Actions.advanced.AdvancedCreate
+Change\ Boolean=engine.Actions.variableSetting.ChangeBoolean
+Change\ Boolean\ of\ Holdable=engine.Actions.variableSetting.ChangeBooleanOfHoldable
+Change\ Global\ Boolean=engine.Actions.variableSetting.ChangeGlobalBoolean
