All parameters changed to basic types

--- a/src/engine/operations/booleanops/booleanops.properties
+++ b/src/engine/operations/booleanops/booleanops.properties
@@ -20,3 +20,4 @@ Screen\ was\ Clicked = engine.operations.booleanops.ScreenClicked
 Screen\ Click\ Held = engine.operations.booleanops.ScreenClickHeld
 Screen\ Click\ Released = engine.operations.booleanops.ScreenClickReleased
 Strings\ are\ Equal = engine.operations.booleanops.StringEquals
+Mouse\ Over = engine.operations.booleanops.ObjectMouseHover
