--- a/src/engine/operations/vectorops/vectorops.properties
+++ b/src/engine/operations/vectorops/vectorops.properties
@@ -9,3 +9,4 @@ Towards\ Location = engine.operations.vectorops.Towards
 Vector\ of\ Overlap = engine.operations.vectorops.NormalToCollision
 Vector\ Scale = engine.operations.vectorops.VectorScale
 Mouse\ Location = engine.operations.vectorops.MouseLocation
+Ith\ Derivative = engine.operations.vectorops.IthDerivativeOf
