Updated properties file

--- a/src/engine/Actions/movement/movement.properties
+++ b/src/engine/Actions/movement/movement.properties
@@ -7,3 +7,5 @@ Set\ Velocity = engine.Actions.movement.SetVelocity
 Set\ Acceleration = engine.Actions.movement.SetAcceleration
 Set\ Path\ Point = engine.Actions.movement.AddToPath
 Follow\ Path = engine.Actions.movement.MoveOnPath
+Remove\ Intersection = engine.Actions.movement.RemoveIntersection
+Remove\ Half\ Intersection = engine.Actions.movement.RemoveHalfIntersection
