--- a/src/engine/Actions/movement/movement.properties
+++ b/src/engine/Actions/movement/movement.properties
@@ -5,3 +5,4 @@ Rotate\ By = engine.Actions.movement.Rotate
 Rotate\ To = engine.Actions.movement.RotateTo
 Set\ Velocity = engine.Actions.movement.SetVelocity
 SetAcceleration = engine.Actions.movement.SetAcceleration
+Bounce = engine.Actions.movement.Bounce
